// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge does not render opacity 1 with color faded 1`] = `
<span
  className="ax-badge ax-badge--faded"
  onClick={undefined}
>
  <span
    className="ax-badge__background"
    style={
      Object {
        "opacity": 0.3,
      }
    }
  />
  <span
    className="ax-badge__content"
  >
    Lorem Ipsum
  </span>
</span>
`;

exports[`Badge renders onClick 1`] = `
<span
  className="ax-badge ax-badge--faded ax-badge--clickable"
  onClick={[Function]}
>
  <span
    className="ax-badge__background"
    style={
      Object {
        "opacity": 0.3,
      }
    }
  />
  <span
    className="ax-badge__content"
  >
    Lorem Ipsum
  </span>
</span>
`;

exports[`Badge renders opacity 1`] = `
<span
  className="ax-badge ax-badge--success"
  onClick={undefined}
>
  <span
    className="ax-badge__background"
    style={
      Object {
        "opacity": 0.5,
      }
    }
  />
  <span
    className="ax-badge__content"
  >
    Lorem Ipsum
  </span>
</span>
`;

exports[`Badge renders opacity 1 1`] = `
<span
  className="ax-badge ax-badge--success ax-text--color-night"
  onClick={undefined}
>
  <span
    className="ax-badge__background"
    style={
      Object {
        "opacity": 1,
      }
    }
  />
  <span
    className="ax-badge__content"
  >
    Lorem Ipsum
  </span>
</span>
`;

exports[`Badge renders opacity maximum 0.3 with color faded 1`] = `
<span
  className="ax-badge ax-badge--faded"
  onClick={undefined}
>
  <span
    className="ax-badge__background"
    style={
      Object {
        "opacity": 0.3,
      }
    }
  />
  <span
    className="ax-badge__content"
  >
    Lorem Ipsum
  </span>
</span>
`;

exports[`Badge renders opacity maximum 0.6 1`] = `
<span
  className="ax-badge ax-badge--success"
  onClick={undefined}
>
  <span
    className="ax-badge__background"
    style={
      Object {
        "opacity": 0.6,
      }
    }
  />
  <span
    className="ax-badge__content"
  >
    Lorem Ipsum
  </span>
</span>
`;

exports[`Badge renders opacity minimum 0.1 1`] = `
<span
  className="ax-badge ax-badge--success"
  onClick={undefined}
>
  <span
    className="ax-badge__background"
    style={
      Object {
        "opacity": 0.1,
      }
    }
  />
  <span
    className="ax-badge__content"
  >
    Lorem Ipsum
  </span>
</span>
`;

exports[`Badge renders opacity minimum 0.1 with color faded 1`] = `
<span
  className="ax-badge ax-badge--faded"
  onClick={undefined}
>
  <span
    className="ax-badge__background"
    style={
      Object {
        "opacity": 0.1,
      }
    }
  />
  <span
    className="ax-badge__content"
  >
    Lorem Ipsum
  </span>
</span>
`;

exports[`Badge renders opacity with color faded 1`] = `
<span
  className="ax-badge ax-badge--faded"
  onClick={undefined}
>
  <span
    className="ax-badge__background"
    style={
      Object {
        "opacity": 0.2,
      }
    }
  />
  <span
    className="ax-badge__content"
  >
    Lorem Ipsum
  </span>
</span>
`;

exports[`Badge renders with color blast-off 1`] = `
<span
  className="ax-badge ax-badge--blast-off ax-text--color-night"
  onClick={undefined}
>
  <span
    className="ax-badge__background"
    style={
      Object {
        "opacity": 1,
      }
    }
  />
  <span
    className="ax-badge__content"
  >
    Lorem Ipsum
  </span>
</span>
`;

exports[`Badge renders with color critical-mass 1`] = `
<span
  className="ax-badge ax-badge--critical-mass ax-text--color-night"
  onClick={undefined}
>
  <span
    className="ax-badge__background"
    style={
      Object {
        "opacity": 1,
      }
    }
  />
  <span
    className="ax-badge__content"
  >
    Lorem Ipsum
  </span>
</span>
`;

exports[`Badge renders with color error 1`] = `
<span
  className="ax-badge ax-badge--error ax-text--color-night"
  onClick={undefined}
>
  <span
    className="ax-badge__background"
    style={
      Object {
        "opacity": 1,
      }
    }
  />
  <span
    className="ax-badge__content"
  >
    Lorem Ipsum
  </span>
</span>
`;

exports[`Badge renders with color faded 1`] = `
<span
  className="ax-badge ax-badge--faded"
  onClick={undefined}
>
  <span
    className="ax-badge__background"
    style={
      Object {
        "opacity": 0.3,
      }
    }
  />
  <span
    className="ax-badge__content"
  >
    Lorem Ipsum
  </span>
</span>
`;

exports[`Badge renders with color giant-leap 1`] = `
<span
  className="ax-badge ax-badge--giant-leap ax-text--color-night"
  onClick={undefined}
>
  <span
    className="ax-badge__background"
    style={
      Object {
        "opacity": 1,
      }
    }
  />
  <span
    className="ax-badge__content"
  >
    Lorem Ipsum
  </span>
</span>
`;

exports[`Badge renders with color ground-control 1`] = `
<span
  className="ax-badge ax-badge--ground-control ax-text--color-night"
  onClick={undefined}
>
  <span
    className="ax-badge__background"
    style={
      Object {
        "opacity": 1,
      }
    }
  />
  <span
    className="ax-badge__content"
  >
    Lorem Ipsum
  </span>
</span>
`;

exports[`Badge renders with color highlight 1`] = `
<span
  className="ax-badge ax-badge--highlight ax-text--color-night"
  onClick={undefined}
>
  <span
    className="ax-badge__background"
    style={
      Object {
        "opacity": 1,
      }
    }
  />
  <span
    className="ax-badge__content"
  >
    Lorem Ipsum
  </span>
</span>
`;

exports[`Badge renders with color luna-dust 1`] = `
<span
  className="ax-badge ax-badge--luna-dust ax-text--color-night"
  onClick={undefined}
>
  <span
    className="ax-badge__background"
    style={
      Object {
        "opacity": 1,
      }
    }
  />
  <span
    className="ax-badge__content"
  >
    Lorem Ipsum
  </span>
</span>
`;

exports[`Badge renders with color moon-lagoon 1`] = `
<span
  className="ax-badge ax-badge--moon-lagoon ax-text--color-night"
  onClick={undefined}
>
  <span
    className="ax-badge__background"
    style={
      Object {
        "opacity": 1,
      }
    }
  />
  <span
    className="ax-badge__content"
  >
    Lorem Ipsum
  </span>
</span>
`;

exports[`Badge renders with color new-horizon 1`] = `
<span
  className="ax-badge ax-badge--new-horizon ax-text--color-night"
  onClick={undefined}
>
  <span
    className="ax-badge__background"
    style={
      Object {
        "opacity": 1,
      }
    }
  />
  <span
    className="ax-badge__content"
  >
    Lorem Ipsum
  </span>
</span>
`;

exports[`Badge renders with color paradise-lost 1`] = `
<span
  className="ax-badge ax-badge--paradise-lost ax-text--color-night"
  onClick={undefined}
>
  <span
    className="ax-badge__background"
    style={
      Object {
        "opacity": 1,
      }
    }
  />
  <span
    className="ax-badge__content"
  >
    Lorem Ipsum
  </span>
</span>
`;

exports[`Badge renders with color primeval-soup 1`] = `
<span
  className="ax-badge ax-badge--primeval-soup ax-text--color-night"
  onClick={undefined}
>
  <span
    className="ax-badge__background"
    style={
      Object {
        "opacity": 1,
      }
    }
  />
  <span
    className="ax-badge__content"
  >
    Lorem Ipsum
  </span>
</span>
`;

exports[`Badge renders with color serene-sea 1`] = `
<span
  className="ax-badge ax-badge--serene-sea ax-text--color-night"
  onClick={undefined}
>
  <span
    className="ax-badge__background"
    style={
      Object {
        "opacity": 1,
      }
    }
  />
  <span
    className="ax-badge__content"
  >
    Lorem Ipsum
  </span>
</span>
`;

exports[`Badge renders with color success 1`] = `
<span
  className="ax-badge ax-badge--success ax-text--color-night"
  onClick={undefined}
>
  <span
    className="ax-badge__background"
    style={
      Object {
        "opacity": 1,
      }
    }
  />
  <span
    className="ax-badge__content"
  >
    Lorem Ipsum
  </span>
</span>
`;

exports[`Badge renders with color terra-form 1`] = `
<span
  className="ax-badge ax-badge--terra-form ax-text--color-night"
  onClick={undefined}
>
  <span
    className="ax-badge__background"
    style={
      Object {
        "opacity": 1,
      }
    }
  />
  <span
    className="ax-badge__content"
  >
    Lorem Ipsum
  </span>
</span>
`;

exports[`Badge renders with color tiny-clanger 1`] = `
<span
  className="ax-badge ax-badge--tiny-clanger ax-text--color-night"
  onClick={undefined}
>
  <span
    className="ax-badge__background"
    style={
      Object {
        "opacity": 1,
      }
    }
  />
  <span
    className="ax-badge__content"
  >
    Lorem Ipsum
  </span>
</span>
`;

exports[`Badge renders with defaultProps 1`] = `
<span
  className="ax-badge ax-badge--faded"
  onClick={undefined}
>
  <span
    className="ax-badge__background"
    style={
      Object {
        "opacity": 0.3,
      }
    }
  />
  <span
    className="ax-badge__content"
  >
    Lorem Ipsum
  </span>
</span>
`;

exports[`Badge renders with full large 1`] = `
<span
  className="ax-badge ax-badge--faded ax-badge--full--large"
  onClick={undefined}
>
  <span
    className="ax-badge__background"
    style={
      Object {
        "opacity": 0.3,
      }
    }
  />
  <span
    className="ax-badge__content"
  >
    Lorem Ipsum
  </span>
</span>
`;

exports[`Badge renders with full medium 1`] = `
<span
  className="ax-badge ax-badge--faded ax-badge--full--medium"
  onClick={undefined}
>
  <span
    className="ax-badge__background"
    style={
      Object {
        "opacity": 0.3,
      }
    }
  />
  <span
    className="ax-badge__content"
  >
    Lorem Ipsum
  </span>
</span>
`;

exports[`Badge renders with full small 1`] = `
<span
  className="ax-badge ax-badge--faded ax-badge--full--small"
  onClick={undefined}
>
  <span
    className="ax-badge__background"
    style={
      Object {
        "opacity": 0.3,
      }
    }
  />
  <span
    className="ax-badge__content"
  >
    Lorem Ipsum
  </span>
</span>
`;

exports[`Badge renders with full true 1`] = `
<span
  className="ax-badge ax-badge--faded ax-badge--full"
  onClick={undefined}
>
  <span
    className="ax-badge__background"
    style={
      Object {
        "opacity": 0.3,
      }
    }
  />
  <span
    className="ax-badge__content"
  >
    Lorem Ipsum
  </span>
</span>
`;
